syntax = "proto3";
//包名
option java_package = "com.huyu.protobuf";
//源文件类名
option java_outer_classname = "CommandReqProto";
message CommandReq{
    int32 command_sign = 1;
    string player_name = 2;
    string command_name = 3;
    repeated string option = 4;
}
